third_party/WebKit/Source/WebKit2/UIProcess/qt/PageViewportControllerClientQt.cpp
@@ -47,7 +47,7 @@ PageViewportControllerClientQt::PageViewportControllerClientQt(QQuickWebView* vi
     , m_lastCommittedScale(-1)
     , m_zoomOutScale(0)
     , m_isUserInteracting(false)
-    , m_ignoreViewportChanges(true)
+    , m_ignoreViewportChanges(false)
 {
     m_scaleAnimation->setDuration(kScaleAnimationDurationMillis);
     m_scaleAnimation->setEasingCurve(QEasingCurve::OutCubic);
@@ -125,15 +125,12 @@ void PageViewportControllerClientQt::flickMoveStarted()
     m_controller->suspendContent();
 
     m_lastScrollPosition = m_viewportItem->contentPos();
-
-    m_ignoreViewportChanges = false;
 }
 
 void PageViewportControllerClientQt::flickMoveEnded()
 {
     // This method is called on the end of the pan or pan kinetic animation.
 
-    m_ignoreViewportChanges = true;
     if (!m_isUserInteracting)
         m_controller->resumeContent();
 }
@@ -154,10 +151,12 @@ void PageViewportControllerClientQt::scaleAnimationStateChanged(QAbstractAnimati
 {
     switch (newState) {
     case QAbstractAnimation::Running:
+        m_ignoreViewportChanges = true;
         m_viewportItem->cancelFlick();
         m_controller->suspendContent();
         break;
     case QAbstractAnimation::Stopped:
+        m_ignoreViewportChanges = false;
         m_controller->resumeContent();
         break;
     default:
@@ -319,8 +318,8 @@ QRectF PageViewportControllerClientQt::nearestValidVisibleContentsRect() const
 void PageViewportControllerClientQt::setViewportPosition(const FloatPoint& contentsPoint)
 {
     QPointF newPosition((m_pageItem->position() + QPointF(contentsPoint)) * m_pageItem->contentsScale());
+    // The contentX and contentY property changes trigger a visible rect update.
     m_viewportItem->setContentPos(newPosition);
-    updateViewportController();
 }
 
 void PageViewportControllerClientQt::setPageScaleFactor(float localScale)
@@ -424,6 +423,7 @@ void PageViewportControllerClientQt::pinchGestureStarted(const QPointF& pinchCen
 
     clearRelativeZoomState();
 
+    m_ignoreViewportChanges = true;
     m_controller->suspendContent();
 
     m_lastPinchCenterInViewportCoordinates = pinchCenterInViewportCoordinates;
@@ -458,6 +458,7 @@ void PageViewportControllerClientQt::pinchGestureEnded()
     if (!m_controller->allowsUserScaling())
         return;
 
+    m_ignoreViewportChanges = false;
     m_pinchStartScale = -1;
 
     // This will take care of resuming the content, even if no animation was performed.
